--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -74,7 +74,7 @@
 
               <!-- Analysis -->
               <ng-container matColumnDef="analysis">
-                <th mat-header-cell *matHeaderCellDef>Analysis</th>
+                <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                   <a
                     [routerLink]="['/survey', element.surveyId, 'analysis']"
@@ -89,13 +89,13 @@
 
               <!-- End Publish -->
               <ng-container matColumnDef="publish">
-                <th mat-header-cell *matHeaderCellDef>Publish</th>
+                <th mat-header-cell *matHeaderCellDef>Status</th>
                 <td mat-cell *matCellDef="let element">
                   <button
                     (click)="startPublish(element.surveyId)"
                     *ngIf="element.status == 'draft'"
                   >
-                    Start
+                    Publish
                   </button>
                   <button
                     (click)="endPublish(element.surveyId)"
@@ -103,6 +103,18 @@
                   >
                     End
                   </button>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="editBtn">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                  <a
+                    [routerLink]="['/edit', element.surveyId]"
+                    class="survey-link"
+                  >
+                    <button>Edit</button>
+                  </a>
                 </td>
               </ng-container>
 
@@ -119,7 +131,7 @@
               <ng-container matColumnDef="deleteBtn">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                  <button (click)="deleteSurvey(element.surveyId)">🗑️</button>
+                  <button (click)="deleteSurvey(element.surveyId)">Delete</button>
                 </td>
               </ng-container>
 
