generate missing question id on edit

--- a/surveysage/src/app/respondent/respondent.component.html
+++ b/surveysage/src/app/respondent/respondent.component.html
@@ -18,7 +18,7 @@
           <!-- Text Response -->
           <input
             *ngIf="question.type === 'text-response'"
-            formControlName="question{{ question.questionId }}"
+            [formControlName]="'question' + question.questionId"
             type="text"
             placeholder="Type your answer"
           />
