--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -1,155 +1,111 @@
-<app-header/>
-<div class="jb-body">
-  <div class="container">
-    <!-- Toolbar -->
-    <mat-toolbar color="primary" class="toolbar">
-      <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-          <mat-icon>home</mat-icon>
-          <span>Home</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>list</mat-icon>
-          <span>My Surveys</span>
-        </button>
-      </mat-menu>
-      <span class="toolbar-title">Survey List</span>
-      <span class="spacer"></span>
-      <button mat-icon-button aria-label="Share">
-        <mat-icon>share</mat-icon>
-      </button>
-      <button mat-icon-button aria-label="Help">
-        <mat-icon>help</mat-icon>
-      </button>
-    </mat-toolbar>
-
-    <!-- Table -->
-    <div class="panel panel-default">
-      <mat-tab-group (selectedTabChange)="onTabChanged($event)">
-        <mat-tab *ngFor="let tabLabel of tabOrder" [label]="tabLabel">
-          <ng-template matTabContent>
-            <table
-              mat-table
-              [dataSource]="dataSources[tabLabel]"
-              matSort
-              class="mat-elevation-z8 survey-table"
+<app-header />
+<mat-tab-group (selectedTabChange)="onTabChanged($event)">
+  <mat-tab *ngFor="let tabLabel of tabOrder" [label]="tabLabel">
+    <ng-template matTabContent>
+      <table
+        mat-table
+        [dataSource]="dataSources[tabLabel]"
+        matSort
+        class="mat-elevation-z8 survey-table"
+      >
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <td mat-cell *matCellDef="let element">
+            <a
+              [routerLink]="['/survey', element.surveyId]"
+              class="survey-link"
+              >{{ element.name }}</a
             >
-              <!-- Name Column -->
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let element">
-                  <a
-                    [routerLink]="['/survey', element.surveyId]"
-                    class="survey-link"
-                    >{{ element.name }}</a
-                  >
-                </td>
-              </ng-container>
+          </td>
+        </ng-container>
 
-              <!-- Description Column -->
-              <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Description
-                </th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.description }}
-                </td>
-              </ng-container>
+        <!-- Description Column -->
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.description }}
+          </td>
+        </ng-container>
 
-              <!-- Owner Column -->
-              <ng-container matColumnDef="owner">
-                <th mat-header-cell *matHeaderCellDef>Owner</th>
-                <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
-              </ng-container>
+        <!-- Owner Column -->
+        <ng-container matColumnDef="owner">
+          <th mat-header-cell *matHeaderCellDef>Owner</th>
+          <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
+        </ng-container>
 
-              <!-- Responses -->
-              <ng-container matColumnDef="responses">
-                <th mat-header-cell *matHeaderCellDef>Responses</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ responses[element.surveyId] }}
-                </td>
-              </ng-container>
+        <!-- Responses -->
+        <ng-container matColumnDef="responses">
+          <th mat-header-cell *matHeaderCellDef>Responses</th>
+          <td mat-cell *matCellDef="let element">
+            {{ responses[element.surveyId] }}
+          </td>
+        </ng-container>
 
-              <!-- Analysis -->
-              <ng-container matColumnDef="analysis">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                  <a
-                    [routerLink]="['/survey', element.surveyId, 'analysis']"
-                    class="survey-link"
-                  >
-                    <button [disabled]="responses[element.surveyId] == 0">
-                      Analysis
-                    </button>
-                  </a>
-                </td>
-              </ng-container>
+        <!-- Analysis -->
+        <ng-container matColumnDef="analysis">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <a
+              [routerLink]="['/survey', element.surveyId, 'analysis']"
+              class="survey-link"
+            >
+              <button [disabled]="responses[element.surveyId] == 0">
+                Analysis
+              </button>
+            </a>
+          </td>
+        </ng-container>
 
-              <!-- End Publish -->
-              <ng-container matColumnDef="publish">
-                <th mat-header-cell *matHeaderCellDef>Status</th>
-                <td mat-cell *matCellDef="let element">
-                  <button
-                    (click)="startPublish(element.surveyId)"
-                    *ngIf="element.status == 'draft'"
-                  >
-                    Publish
-                  </button>
-                  <button
-                    (click)="endPublish(element.surveyId)"
-                    *ngIf="element.status == 'published'"
-                  >
-                    End
-                  </button>
-                </td>
-              </ng-container>
+        <!-- End Publish -->
+        <ng-container matColumnDef="publish">
+          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              (click)="startPublish(element.surveyId)"
+              *ngIf="element.status == 'draft'"
+            >
+              Publish
+            </button>
+            <button
+              (click)="endPublish(element.surveyId)"
+              *ngIf="element.status == 'published'"
+            >
+              End
+            </button>
+          </td>
+        </ng-container>
 
-              <ng-container matColumnDef="editBtn">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                  <a
-                    [routerLink]="['/edit', element.surveyId]"
-                    class="survey-link"
-                  >
-                    <button>Edit</button>
-                  </a>
-                </td>
-              </ng-container>
+        <ng-container matColumnDef="editBtn">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <a [routerLink]="['/edit', element.surveyId]" class="survey-link">
+              <button>Edit</button>
+            </a>
+          </td>
+        </ng-container>
 
-              <!-- Get Link to Responses -->
-              <ng-container matColumnDef="respondURL">
-                <th mat-header-cell *matHeaderCellDef>Respondent</th>
-                <td mat-cell *matCellDef="let element">
-                  <button (click)="copyRespondentURL(element.surveyId)">
-                    Copy URL
-                  </button>
-                </td>
-              </ng-container>
+        <!-- Get Link to Responses -->
+        <ng-container matColumnDef="respondURL">
+          <th mat-header-cell *matHeaderCellDef>Respondent</th>
+          <td mat-cell *matCellDef="let element">
+            <button (click)="copyRespondentURL(element.surveyId)">
+              Copy URL
+            </button>
+          </td>
+        </ng-container>
 
-              <ng-container matColumnDef="deleteBtn">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                  <button (click)="deleteSurvey(element.surveyId)">Delete</button>
-                </td>
-              </ng-container>
+        <ng-container matColumnDef="deleteBtn">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <button (click)="deleteSurvey(element.surveyId)">Delete</button>
+          </td>
+        </ng-container>
 
-              <!-- Header and Rows -->
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </ng-template>
-        </mat-tab>
-      </mat-tab-group>
-    </div>
-
-    <!-- Back Button -->
-    <div class="actions">
-      <button mat-raised-button color="primary" (click)="clickEvent()">
-        Back
-      </button>
-    </div>
-  </div>
-</div>
+        <!-- Header and Rows -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </ng-template>
+  </mat-tab>
+</mat-tab-group>
