--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -50,7 +50,7 @@
               [routerLink]="['/survey', element.surveyId, 'analysis']"
               class="survey-link"
             >
-              <button [disabled]="responses[element.surveyId] == 0">
+              <button class="action-button analysis-button" [disabled]="responses[element.surveyId] == 0">
                 Analysis
               </button>
             </a>
@@ -61,13 +61,13 @@
         <ng-container matColumnDef="publish">
           <th mat-header-cell *matHeaderCellDef>Status</th>
           <td mat-cell *matCellDef="let element">
-            <button
+            <button class="action-button"
               (click)="startPublish(element.surveyId)"
               *ngIf="element.status == 'draft'"
             >
               Publish
             </button>
-            <button
+            <button class="action-button"
               (click)="endPublish(element.surveyId)"
               *ngIf="element.status == 'published'"
             >
@@ -80,7 +80,7 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
             <a [routerLink]="['/edit', element.surveyId]" class="survey-link">
-              <button>Edit</button>
+              <button class="action-button edit-button">Edit</button>
             </a>
           </td>
         </ng-container>
@@ -89,7 +89,7 @@
         <ng-container matColumnDef="respondURL">
           <th mat-header-cell *matHeaderCellDef>Respondent</th>
           <td mat-cell *matCellDef="let element">
-            <button (click)="copyRespondentURL(element.surveyId)">
+            <button class="action-button copyURL-button" (click)="copyRespondentURL(element.surveyId)">
               Copy URL
             </button>
           </td>
@@ -98,7 +98,7 @@
         <ng-container matColumnDef="deleteBtn">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
-            <button (click)="deleteSurvey(element.surveyId)">Delete</button>
+            <button class="action-button delete-button" (click)="deleteSurvey(element.surveyId)">Delete</button>
           </td>
         </ng-container>
 
